--- a/WildBasinPlantDichotomy/Base.lproj/Main.storyboard
+++ b/WildBasinPlantDichotomy/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,17 +22,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ezc-I7-V7l">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ezc-I7-V7l">
                                 <rect key="frame" x="0.0" y="72" width="375" height="595"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="1BR-Lz-9BL">
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1BR-Lz-9BL" id="33H-9l-50c">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="POv-lG-pJy">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HFL-n2-8PI">
+                                                    <rect key="frame" x="0.0" y="56" width="375" height="44"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTQ-fd-mqK">
+                                                            <rect key="frame" x="166" y="8" width="42" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="0.30372469190140844" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="CTQ-fd-mqK" firstAttribute="centerX" secondItem="HFL-n2-8PI" secondAttribute="centerX" id="8fq-ib-kNr"/>
+                                                        <constraint firstItem="CTQ-fd-mqK" firstAttribute="top" secondItem="HFL-n2-8PI" secondAttribute="topMargin" id="yrw-xV-nZt"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="POv-lG-pJy" firstAttribute="bottom" secondItem="HFL-n2-8PI" secondAttribute="bottom" id="4mS-nX-a18"/>
+                                                <constraint firstItem="POv-lG-pJy" firstAttribute="centerY" secondItem="33H-9l-50c" secondAttribute="centerY" id="CUj-sl-OGh"/>
+                                                <constraint firstItem="POv-lG-pJy" firstAttribute="top" secondItem="33H-9l-50c" secondAttribute="top" id="EIr-xf-Hoh"/>
+                                                <constraint firstItem="POv-lG-pJy" firstAttribute="leading" secondItem="33H-9l-50c" secondAttribute="leading" id="GBd-sQ-TS5"/>
+                                                <constraint firstItem="POv-lG-pJy" firstAttribute="leading" secondItem="HFL-n2-8PI" secondAttribute="leading" id="MmB-BL-ZdV"/>
+                                                <constraint firstAttribute="trailing" secondItem="POv-lG-pJy" secondAttribute="trailing" id="UgB-69-85m"/>
+                                                <constraint firstItem="POv-lG-pJy" firstAttribute="trailing" secondItem="HFL-n2-8PI" secondAttribute="trailing" id="lPn-M4-nrL"/>
+                                                <constraint firstItem="HFL-n2-8PI" firstAttribute="top" secondItem="33H-9l-50c" secondAttribute="topMargin" constant="48" id="wfU-Kc-cRf"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="zue-mJ-tzO" kind="modal" id="96p-rM-Yd4"/>
@@ -43,9 +74,8 @@
                                     <outlet property="delegate" destination="0yF-76-4xA" id="NEI-g9-STf"/>
                                 </connections>
                             </tableView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jKj-Pi-JTb">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jKj-Pi-JTb">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="All Plants" id="g0s-ZC-Shh">
                                         <barButtonItem key="leftBarButtonItem" image="back" id="yuk-sg-iO7">
@@ -58,6 +88,15 @@
                             </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jKj-Pi-JTb" firstAttribute="trailing" secondItem="Ezc-I7-V7l" secondAttribute="trailing" id="3vC-Pg-b5b"/>
+                            <constraint firstItem="jKj-Pi-JTb" firstAttribute="leading" secondItem="Ezc-I7-V7l" secondAttribute="leading" id="7Hy-eH-4FC"/>
+                            <constraint firstItem="Ezc-I7-V7l" firstAttribute="top" secondItem="jKj-Pi-JTb" secondAttribute="bottom" id="Mbo-1n-QWX"/>
+                            <constraint firstItem="Ezc-I7-V7l" firstAttribute="bottom" secondItem="PKT-Z6-cbe" secondAttribute="top" id="PL7-R8-O7A"/>
+                            <constraint firstItem="jKj-Pi-JTb" firstAttribute="leading" secondItem="tl7-aJ-0Ht" secondAttribute="leading" id="lKA-2Q-pMY"/>
+                            <constraint firstAttribute="trailing" secondItem="jKj-Pi-JTb" secondAttribute="trailing" id="oAT-js-pKj"/>
+                            <constraint firstItem="jKj-Pi-JTb" firstAttribute="top" secondItem="3yS-TA-HkZ" secondAttribute="bottom" constant="8" id="xbc-EB-wMe"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="Ezc-I7-V7l" id="AwT-bg-PRn"/>
@@ -65,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Pd-kM-Hab" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1937" y="251"/>
+            <point key="canvasLocation" x="-1938.4000000000001" y="250.52473763118442"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Rcz-T8-haD">
@@ -110,45 +149,71 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7w3-tD-dGP">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7w3-tD-dGP">
                                 <rect key="frame" x="112" y="415" width="151" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="kCc-4T-yCL"/>
+                                </constraints>
                                 <state key="normal" title="Start Plant Dichotomy"/>
                                 <connections>
                                     <segue destination="gab-q0-cIe" kind="modal" id="SJ1-mL-TFF"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qsF-lS-s5J">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qsF-lS-s5J">
                                 <rect key="frame" x="88" y="516" width="199" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Kbi-Tb-XRV"/>
+                                </constraints>
                                 <state key="normal" title="Learn More About Wild Basin"/>
                                 <connections>
                                     <segue destination="eeu-E3-9go" kind="presentation" id="v9F-g7-SVd"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zo2-yD-YqQ">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zo2-yD-YqQ">
                                 <rect key="frame" x="96" y="465" width="174" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="iAn-Un-QUl"/>
+                                </constraints>
                                 <state key="normal" title="View All 87 Woody Plants"/>
                                 <connections>
                                     <segue destination="0yF-76-4xA" kind="modal" id="LB5-vV-8gs"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rJo-OD-BxV">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rJo-OD-BxV">
                                 <rect key="frame" x="135" y="562" width="104" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="P4W-Av-8He"/>
+                                </constraints>
                                 <state key="normal" title="Special Thanks"/>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="WildBasinLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8Va-DB-xjb">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WildBasinLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8Va-DB-xjb">
                                 <rect key="frame" x="78" y="20" width="211" height="85"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="85" id="YiT-Af-fFm"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Texas" translatesAutoresizingMaskIntoConstraints="NO" id="f0I-dw-CXl">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Texas" translatesAutoresizingMaskIntoConstraints="NO" id="f0I-dw-CXl">
                                 <rect key="frame" x="70" y="140" width="226" height="216"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="qsF-lS-s5J" firstAttribute="centerX" secondItem="rJo-OD-BxV" secondAttribute="centerX" id="70s-A3-kGi"/>
+                            <constraint firstItem="f0I-dw-CXl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="54" id="9CP-Z5-DR2"/>
+                            <constraint firstItem="rJo-OD-BxV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="H8t-mA-kw9"/>
+                            <constraint firstItem="f0I-dw-CXl" firstAttribute="centerX" secondItem="Zo2-yD-YqQ" secondAttribute="centerX" id="PIP-ho-3aO"/>
+                            <constraint firstItem="8Va-DB-xjb" firstAttribute="centerX" secondItem="f0I-dw-CXl" secondAttribute="centerX" id="Pmx-x8-H0d"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="f0I-dw-CXl" secondAttribute="trailing" constant="63" id="SkR-iH-Yes"/>
+                            <constraint firstItem="qsF-lS-s5J" firstAttribute="top" secondItem="Zo2-yD-YqQ" secondAttribute="bottom" constant="21" id="Voh-yF-Quf"/>
+                            <constraint firstItem="8Va-DB-xjb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="62" id="W00-WG-326"/>
+                            <constraint firstItem="7w3-tD-dGP" firstAttribute="centerX" secondItem="qsF-lS-s5J" secondAttribute="centerX" id="eyQ-BV-S4m"/>
+                            <constraint firstItem="rJo-OD-BxV" firstAttribute="top" secondItem="qsF-lS-s5J" secondAttribute="bottom" constant="16" id="jqg-GB-WKN"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rJo-OD-BxV" secondAttribute="bottom" constant="75" id="lRB-5s-pd8"/>
+                            <constraint firstItem="Zo2-yD-YqQ" firstAttribute="top" secondItem="7w3-tD-dGP" secondAttribute="bottom" constant="20" id="mkb-yu-IVL"/>
+                            <constraint firstItem="7w3-tD-dGP" firstAttribute="top" secondItem="f0I-dw-CXl" secondAttribute="bottom" constant="59" id="nIj-6y-yiC"/>
+                            <constraint firstItem="8Va-DB-xjb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="qjO-ZT-H8D"/>
+                            <constraint firstItem="f0I-dw-CXl" firstAttribute="top" secondItem="8Va-DB-xjb" secondAttribute="bottom" constant="35" id="xKC-Y6-kvU"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
